@@ -65,7 +65,6 @@ UIC = @UIC@
 WINDRES = @WINDRES@
 
 # Variable stuff as set by configure
-BZ2_LIBS = @BZ2_LIBS@
 BOOST_CPPFLAGS = @BOOST_CPPFLAGS@
 BOOST_FILESYSTEM_LIB = @BOOST_FILESYSTEM_LIB@
 BOOST_LDFLAGS = @BOOST_LDFLAGS@
@@ -86,7 +85,6 @@ LDFLAGS_RPATHS = @LDFLAGS_RPATHS@
 FLAC_LIBS = @FLAC_LIBS@
 ICONV_LIBS = @ICONV_LIBS@
 LIBINTL_LIBS = @LIBINTL_LIBS@
-LZO_LIBS = @LZO_LIBS@
 MAGIC_LIBS = @MAGIC_LIBS@
 MATROSKA_CFLAGS = @MATROSKA_CFLAGS@
 MATROSKA_LDFLAGS = @MATROSKA_LDFLAGS@
