@@ -35,8 +35,6 @@ m4_include(ac/ebml.m4)
 m4_include(ac/matroska.m4)
 dnl m4_include(ac/ebml_matroska_internal.m4)
 m4_include(ac/zlib.m4)
-m4_include(ac/lzo.m4)
-m4_include(ac/bz.m4)
 m4_include(ac/wxwidgets.m4)
 m4_include(ac/qt4.m4)
 m4_include(ac/gnurx.m4)
