@@ -25,7 +25,7 @@ T_024sync_mp3:00ab74d47edbd72ce255785f3b32a8e4-a22467b0ea6e187f86257848b77f1b1b:
 T_025sync_vorbis:728277b455a2dba19e57ca916011d8c3-4aecfaec0ff5da8e535d7348df33a94b:passed:20040825-234344:0.112725512
 T_026sync_pcm:685121e0c33a48a69c57ad481990b9bb-ffcfaccc447ab521bd97456aea52812f:passed:20040825-234346:0.468002285
 T_027default_track:753697fb82497fbfe6b6c83642659f5b:passed:20040825-234348:0.613537442
-T_028compression:7dc41e8284e745dee6291e7ac24da09b:passed:20040825-234348:0.078682653
+T_028compression:8f343a0dd80604f8aeeda1a7466012dd:passed:20040825-234348:0.078682653
 T_029link:all ok:passed:20040825-235039:0.925578898
 T_032cues:ac3d0299338c447ca3f68b3ece655478:passed:20040825-235040:0.182090352
 T_033timecode_scale:65f8beb3cd7967461c241a022cb8971c-b81d18a1b6abea58bf6dff80830ccbba:passed:20040825-235040:0.312093398
